fix(overflow): make overflowing content accessible via scrollbar #162

--- a/src/style-base.scss
+++ b/src/style-base.scss
@@ -51,3 +51,7 @@
     padding-left: var(--auro-size-md);
   }
 }
+
+:host([root]) {
+  overflow-y: auto;
+}
